--- a/playground/package.json
+++ b/playground/package.json
@@ -1,5 +1,16 @@
 {
-  "devDependencies": {
-    "@types/node": "^18.11.11"
-  }
+  "name": "playground",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "dependencies": {
+    "authflow-js": "^1.0.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
