--- a/package.json
+++ b/package.json
@@ -1,59 +1,32 @@
 {
-  "name": "authflow-js",
-  "version": "1.0.3",
-  "description": "Complete AUTHFLOW Logic",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "./dist/esm/index.d.ts",
-  "files": [
-    "dist",
-    "LICENSE",
-    "README.md"
-  ],
+  "name": "npm-package",
+  "version": "1.0.0",
+  "description": "Demo page for authflow-js",
   "scripts": {
-    "build": "npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc",
-    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
-    "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\"",
-    "test": "jest --config jestconfig.json",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run prettier && npm run lint"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html --dist-dir docs --public-url ."
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/HristijanGjorgjioski/authflow-js.git"
   },
-  "keywords": [],
   "author": "Hristijan Gjorgjioski",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/HristijanGjorgjioski/authflow-js/issues"
-  },
   "homepage": "https://github.com/HristijanGjorgjioski/authflow-js#readme",
-  "dependencies": {
+  "devDependencies": {
     "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
+    "authflow-js": "^1.0.3",
+    "eslint": "^8.29.0",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "parcel": "^2.8.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.4"
-  },
-  "devDependencies": {
-    "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.46.0",
-    "@typescript-eslint/parser": "^5.46.0",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.3.1",
-    "jest-canvas-mock": "^2.4.0",
-    "jest-environment-jsdom": "^29.3.1",
-    "prettier": "^2.8.1",
-    "ts-jest": "^29.0.3"
-  },
-  "peerDependencies": {
-    "react": ">=16"
   }
 }
